--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Pranavvarma05.github.io/ecommerce",
+  "homepage": "https://Pranavvarma05.github.io/ecommerce/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh -pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
